# poco

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  example.ipynb  example.py  main.py  pyproject.toml  requirements.txt
docs/: api.md  concepts.md  index.md  installation.md  mkdocs.yml  roadmap.md  usage.md
estimators/: base.py  sample_mean.py
generators/: bootstrap_constant_shifter.py  empirical_base.py  normal_mean_shifter.py  parametric_base.py
poco/: __init__.py  core.py
poco-copy/estimators/: base.py  sample_mean.py  twfe_panelols.py
poco-copy/examples/: empirical_panel_ols.py  normal_mean.py  panel_ols.py
poco-copy/generators/: base.py
poco-copy/generators/empirical/: bootstrap_constant_shifter.py  empirical_base.py  panel_data_treatment_randomization.py
poco-copy/generators/parametric/: normal_mean_shifter.py  panel_data_block_treatment.py  parametric_base.py
poco-copy/simulation/: plotter.py  runner.py
poco/estimators/: __init__.py
poco/examples/: __init__.py  basic_usage.py
poco/generators/: __init__.py
poco/plotters/: __init__.py
poco/simulators/: __init__.py
simulation/: plotter.py  runner.py
