[project]
name = "poco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
]
