[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "poco.version.__version__"}

[project]
name = "poco"
dynamic = ["version"]
description = "A simple Python package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.3",
]

[project.urls]
"Homepage" = "https://github.com/ls008z/poco"
"Bug Tracker" = "https://github.com/ls008z/poco/issues"

[project.scripts]
poco = "poco:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0",
]
